[package]
name = "utiputils"
version = "0.0.1"
edition = "2021"
autobins = false
license = "GPL-2.0-or-later"

[dependencies]
anyhow = "1.0.95"
env_logger = { version="0.11.6", features = ["color"]}
log = "0.4.25"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }

[[bin]]
name = "utping"
path = "src/bin/ping.rs"

[[bin]]
name = "utarping"
path = "src/bin/arping.rs"

[[bin]]
name = "utclockdiff"
path = "src/bin/clockdiff.rs"

[[bin]]
name = "uttracepath"
path = "src/bin/tracepath.rs"

[[bin]]
name = "utifenslave"
path = "src/bin/ifenslave.rs"