[package]
name = "utiputils"
version = "0.0.1"
edition = "2021"
autobins = false
license = "GPL-2.0-or-later"

[dependencies]
libc = "0.2"
anyhow = "1.0.95"
env_logger = { version="0.11.6", features = ["color"]}
log = "0.4.25"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
lazy_static = "1.5.0"
ctrlc = "3.4.5"
futures = "0.3.31"
rtnetlink = "0.16.0"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
mac_address = "1.1.8"
pnet = "0.35.0"
trust-dns-resolver = "0.22.0"

[[bin]]
name = "utping"
path = "src/bin/ping.rs"

[[bin]]
name = "utarping"
path = "src/bin/arping.rs"

[[bin]]
name = "utclockdiff"
path = "src/bin/clockdiff.rs"

[[bin]]
name = "uttracepath"
path = "src/bin/tracepath.rs"

[[bin]]
name = "utifenslave"
path = "src/bin/ifenslave.rs"