[package]
name = "utiputils"
edition = "2021"
autobins = false
license = "GPL-2.0-or-later"

[dependencies]
libc = "0.2"
nix = {version="0.29.0",features = ["socket", "user", "net"]}
clap = { version = "4.5.30", features = ["derive"] }
pnet = "0.35.0"
rand = "0.9.0"
socket2 ={ version="0.5.8", features = ["all"]}
anyhow = "1.0.95"
ctrlc = "3.4.5"
env_logger = { version="0.11.6", features = ["color"]}
log = "0.4.25"
trust-dns-resolver = "0.22.0"
chrono = "0.4.39"
lazy_static = "1.5.0"
hex = "0.4.3"

futures = "0.3.31"
rtnetlink = "0.16.0"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
mac_address = "1.1.8"

[[bin]]
name = "utping"
path = "src/bin/ping.rs"

[[bin]]
name = "utarping"
path = "src/bin/arping.rs"

[[bin]]
name = "utclockdiff"
path = "src/bin/clockdiff.rs"

[[bin]]
name = "uttracepath"
path = "src/bin/tracepath.rs"

[[bin]]
name = "utifenslave"
path = "src/bin/ifenslave.rs"
